--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 name = "advent-of-code"
 version = "0.1.0"
 edition = "2021"
+default-run = "advent-of-code"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "aoc"
+path = "src/lib.rs"
 
 [dependencies]
 regex = "1.10.2"
